--- a/shopapp_angular/src/app/components/sign-in/sign-in.component.scss
+++ b/shopapp_angular/src/app/components/sign-in/sign-in.component.scss
@@ -3,7 +3,7 @@
   top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 1041 !important;
+  z-index: 1041;
   border: 2px solid #fff;
   border-radius: 24px;
   padding: 30px 30px 0 30px;
