complete call API login and register from Angular

--- a/shopapp_angular/src/app/components/sign-in/sign-in.component.html
+++ b/shopapp_angular/src/app/components/sign-in/sign-in.component.html
@@ -38,7 +38,7 @@
 
                 <div class="Remember">
                     <div class="checkbox">
-                        <input type="checkbox" id="persisent" name="persisent" class="input_check" checked="checked" value="true"    >
+                        <input type="checkbox" id="persisent" name="persisent" class="input_check" [(ngModel)]="rememberMe">
                         <label for="persisent" class="remem_pass">Stay signed in</label>
                     </div>
                     <div class="forgot">
