--- a/shopapp_angular/src/app/components/home/home.component.html
+++ b/shopapp_angular/src/app/components/home/home.component.html
@@ -22,37 +22,37 @@
   <div class="container listcategory">
     <ul>
       <li>
-        <a href="">
+        <a [routerLink] = "['/items']">
           <img src="assets/image/gif.jpg" alt="Image 1">
           <p>Gifts</p>
         </a>
       </li>
       <li>
-        <a href="#">
+        <a [routerLink] = "['/items']">
           <img src="assets/image/hoa.png" alt="Image 2">
           <p>Flowers</p>
         </a>
       </li>
       <li>
-        <a href="">
+        <a [routerLink] = "['/items']">
           <img src="assets/image/decor.png" alt="Image 3">
           <p>Decorations</p>
         </a>
       </li>
       <li>
-        <a href="">
+        <a [routerLink] = "['/items']">
           <img src="assets/image/trangsuc.jpg" alt="Image 4">
           <p>Jewelry</p>
         </a>
       </li>
       <li>
-        <a href="">
+        <a [routerLink] = "['/items']">
           <img src="assets/image/dodung.jpg" alt="Image 5">
           <p>Utensils</p>
         </a>
       </li>
       <li>
-        <a href="">
+        <a [routerLink] = "['/items']">
           <img src="assets/image/tre.png" alt="Image 6">
           <p>Bamboo utensils</p>
         </a>
