--- a/shopapp_angular/src/app/components/header/header.component.html
+++ b/shopapp_angular/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
   
         <!-- Category Select -->
         <div class="dropdown" (clickOutside)="onOutsideClick($event)">
-          <button class="btn transparent-btn" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" (click)="toggleDropdown()">
+          <button class="btn transparent-btn" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" (click)="toggleDropdown($event)">
             <span class="btn-icon">
               <i class="fa-solid fa-bars"></i>
             </span>
@@ -43,6 +43,47 @@
         <!-- Đơn hàng Icon -->
         <div class="d-flex align-items-center cart-icon">
           <i class="fa-solid fa-cart-shopping"></i>
+        </div>
+
+        <div class="view_account" (clickOutside)="onOutsideClick($event)">
+          <button class="account" (click)="toggleMenu($event)">
+            <i class="fa-regular fa-user icon_account"></i>
+            <i class="fa-solid fa-caret-down trigger"></i>
+          </button>
+          @if(showMenu){
+            <div class="menu">
+              <ul class="list-menu">
+                <li>
+                  <a href="" class="profile">
+                    <i class="fa-regular fa-user icon_account"></i>
+                    <span>
+                      <h4 class="user_name">Hoàng Nguyễn Nhật Minh</h4>
+                      <p>View your profile</p>
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <hr>
+                </li>
+                <li>
+                  <a href="" class="setting">
+                    <i class="fa-solid fa-gear"></i>
+                    <span>
+                      <p>Account Setting</p>
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="sign_out">
+                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                    <span>
+                      <p>Sign out</p>
+                    </span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          }
         </div>
       </div>
   </nav>
