--- a/shopapp_angular/src/app/components/header/header.component.scss
+++ b/shopapp_angular/src/app/components/header/header.component.scss
@@ -169,4 +169,80 @@ header{
   }
 
 
-  
+  .view_account {
+    /* Định dạng giao diện cho div "view_account" tại đây */
+    background-color: transparent;
+    border-radius: 5px;
+
+    .account {
+        /* Định dạng giao diện cho button "account" tại đây */
+        display: flex;
+        background-color: transparent;
+        color: #222222;
+        border: none;
+        padding: 7px 10px 7px 10px;
+        margin-left: 10px;
+        cursor: pointer;
+        //position: absolute;
+    }
+
+    .account .icon_account{
+      padding-right: 5px;
+    }
+
+    .account:hover{
+      background-color: rgba(0, 0, 0, 0.1); /* Màu xám nhạt khi hover */
+      border-radius: 20px;
+    }
+
+    .menu {
+        /* Định dạng giao diện cho div "menu" tại đây */
+        display: block;
+        position: absolute;
+        top: 85px;
+        right: 35px;
+        background-color: #fff !important;
+        border-radius: 5px;
+        box-shadow: var(--clg-effect-sem-shadow-elevation-3, 0px 1px 3px 0px rgba(0, 0, 0, 0.3019607843), 0px 4px 8px 3px rgba(0, 0, 0, 0.1490196078)) !important;
+
+        .list-menu {
+            /* Định dạng giao diện cho ul "list-menu" tại đây */
+            list-style-type: none;
+            padding: 0;
+            li {
+                /* Định dạng giao diện cho các li trong "list-menu" tại đây */
+                padding: 6px 18px 6px 18px;
+                a {
+                    /* Định dạng giao diện cho các link trong "list-menu" tại đây */
+                    text-decoration: none;
+                    color: #333;
+                    display: flex;
+                    align-items: center;
+
+                }
+                a span p{
+                  position: relative;
+                  top: 7px;
+                  left: 30px;
+                }
+                a span h4{
+                  display: block;
+                  padding-left: 28px;
+                  margin-bottom: 0;
+                  margin-top: 5px;
+                }
+                a span:hover{
+                    /* Định dạng giao diện khi hover vào các link trong "list-menu" tại đây */
+                    p{
+                      color: #007BFF;
+                    }
+                    
+                }
+            }
+            li hr{
+              padding: 0;
+              margin: 0;
+            }
+        }
+    }
+}
